# HelloWorld

./: .env.qnap.example  .env.rpi.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.qnap.yml  docker-compose.rpi.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.qnap  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_labs_rooms.py  0003_users_academic_year.py  0004_users_password_flags.py  0005_google_notes_tables.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/commands/: __init__.py  backup_postgres.py  backup_sqlite.py
backend/app/core/: config.py  constants.py  security.py
backend/app/db/: base.py  seed.py  session.py  sqlite_db.py
backend/app/middleware/: network_access.py
backend/app/models/: __init__.py  audit_log.py  lab.py  note.py  note_sheet_binding.py  presence_latest.py  room.py  session.py  status_change.py  user.py  user_google_token.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: attendance.py  auth.py  notes.py  presence.py  sessions.py  settings.py  users.py
backend/app/services/: attendance_service.py  audit_service.py  auto_close_service.py  backup_service.py  (+5 more)
backend/scripts/: generate_contact_time.py  情報処理システム研究室_コンタクトタイム_見本.xlsx
backend/tests/: test_attendance_presence_sessions.py  test_auth_admin_flow.py  test_backup_service.py  test_deletion_flows.py  test_health.py  test_nas_storage.py  test_network_access.py  test_notes_api.py  test_sqlite_backup_service.py
(+80 files in other folders)
